<?xml version="1.0"?>
<package format="2">
  <name>relnav_sensor_arn</name>
  <version>0.0.0</version>
  <description>
	    Blackbox Angles-and-Range sensor
  </description>

  <maintainer email="michael.pantic@epfl.ch">Michael Pantic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospace_msgs</depend>
  <depend>rospace_lib</depend>

</package>
